--- a/src/@assembly/styles/plugins/perfect-scrollbar.scss
+++ b/src/@assembly/styles/plugins/perfect-scrollbar.scss
@@ -42,6 +42,7 @@
         width: 14px;
         background: transparent !important;
         transition: none !important;
+        left: auto !important;
 
         &:hover,
         &:focus,
